add more examples

--- a/quantlib/notebooks/data_examples.ipynb
+++ b/quantlib/notebooks/data_examples.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# Create service with Alpha Vantage\n",
-    "service = DataService.create_default_service(alpha_vantage_key='1S246WCWWOKHXO01')\n",
+    "service = DataService.create_default_service(alpha_vantage_key='')\n",
     "\n",
     "# Get data\n",
     "end_date = datetime.now()\n",
@@ -539,7 +539,7 @@
     }
    ],
    "source": [
-    "intraday_data = service.get_ohlc_prices(\n",
+    "intraday_data = service.get_close_prices(\n",
     "    'PETR4',\n",
     "    'mt5',\n",
     "    '2025-01-01',\n",
