--- a/quantlib/notebooks/llm_analytics.ipynb
+++ b/quantlib/notebooks/llm_analytics.ipynb
@@ -24,15 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'MetaTrader5'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mquantlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdatasource\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mservice\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataService\n\u001b[32m      2\u001b[39m data_service = DataService.create_default_service()\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Define parameters for data fetching\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/c/Users/enzob/OneDrive/Desktop/ai/quantlib/quantlib/datasource/service.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01msources\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01myahoo\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m YahooFinanceSource\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01msources\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01malpha_vantage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AlphaVantageSource\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01msources\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmt5\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MT5Source\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mquantlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtimeseries\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TimeSeries\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mDataService\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/c/Users/enzob/OneDrive/Desktop/ai/quantlib/quantlib/datasource/sources/mt5.py:3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m List, Dict, Optional, Any\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mMetaTrader5\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmt5\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplatform\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'MetaTrader5'"
+     ]
+    }
+   ],
    "source": [
     "from quantlib.datasource.service import DataService\n",
     "data_service = DataService.create_default_service()\n",
     "\n",
     "# Define parameters for data fetching\n",
-    "symbol = \"PETR4\"  # Change to your desired symbol\n",
+    "symbol = \"IBOV\"  # Change to your desired symbol\n",
     "start_date = \"2021-01-01\"  # Adjust as needed\n",
     "end_date = \"2025-05-16\"    # Adjust as needed\n",
     "interval = \"1m\"            # 1-minute data"
@@ -71,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,18 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.1994\n",
-      "Epoch 2, Loss: 0.0354\n",
-      "Epoch 3, Loss: 0.0344\n",
-      "Epoch 4, Loss: 0.0341\n",
-      "Epoch 5, Loss: 0.0340\n"
+      "Epoch 1, Loss: 0.2077\n"
      ]
     }
    ],
@@ -146,29 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted returns for next 5 days: [ 2.67594612e-03  7.92015515e-03  7.29085006e-03 -5.08548325e-03\n",
-      "  7.92015515e-03 -1.32664493e-02  3.30525120e-03  4.98339809e-03\n",
-      "  4.14432464e-03 -1.09988439e-03  5.61270317e-03 -1.93895783e-03\n",
-      " -1.09988439e-03  3.30525120e-03 -5.71478833e-03 -1.09988439e-03\n",
-      " -1.32664493e-02 -2.77803128e-03  3.68494142e-04  4.98339809e-03\n",
-      " -5.71478833e-03  9.97799226e-04 -1.93895783e-03  7.29085006e-03\n",
-      " -1.93895783e-03  4.98339809e-03  1.02276071e-02  1.02276071e-02\n",
-      " -4.70579302e-04 -4.24640980e-03 -1.09988439e-03  4.14432464e-03\n",
-      " -3.40733636e-03 -2.77803128e-03  7.29085006e-03  5.61270317e-03\n",
-      "  2.67594612e-03 -4.70579302e-04 -5.08548325e-03 -8.02224031e-03\n",
-      "  2.67594612e-03  1.10666806e-02 -1.09988439e-03 -4.70579302e-04\n",
-      " -2.77803128e-03 -1.93895783e-03  1.29545958e-02  9.97799226e-04\n",
-      " -1.09988439e-03 -1.09988439e-03 -9.49061883e-03 -1.93895783e-03\n",
-      "  1.29545958e-02  3.30525120e-03  3.68494142e-04  1.83687267e-03\n",
-      " -5.10425799e-05 -5.10425799e-05 -5.10425799e-05 -5.10425799e-05\n",
-      " -5.10425799e-05]\n"
+     "ename": "IndexError",
+     "evalue": "index 127 is out of bounds for axis 0 with size 127",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m predicted_tokens = forecaster.fit(prompt, steps=\u001b[32m5\u001b[39m)  \u001b[38;5;66;03m# Predict next 5 days\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Convert predictions back to returns\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m predicted_returns = \u001b[43mMarketTokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtokens_to_values\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredicted_tokens\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[43m    \u001b[49m\u001b[43mforecaster\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbins\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPredicted returns for next periods:\u001b[39m\u001b[33m\"\u001b[39m, predicted_returns[:-\u001b[32m5\u001b[39m])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/c/Users/enzob/OneDrive/Desktop/ai/quantlib/quantlib/analytics/llm.py:99\u001b[39m, in \u001b[36mMarketTokenizer.tokens_to_values\u001b[39m\u001b[34m(tokens, bins)\u001b[39m\n\u001b[32m     97\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Convert tokens back to approximate values using bin centers.\"\"\"\u001b[39;00m\n\u001b[32m     98\u001b[39m bin_centers = (bins[:-\u001b[32m1\u001b[39m] + bins[\u001b[32m1\u001b[39m:]) / \u001b[32m2\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbin_centers\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mIndexError\u001b[39m: index 127 is out of bounds for axis 0 with size 127"
      ]
     }
    ],
@@ -193,7 +193,7 @@
     "    forecaster.bins\n",
     ")\n",
     "\n",
-    "print(\"Predicted returns for next periods:\", predicted_returns)"
+    "print(\"Predicted returns for next periods:\", predicted_returns[:-5])"
    ]
   },
   {
@@ -215,6 +215,13 @@
     "mse = np.mean((predicted_returns - actual_returns) ** 2)\n",
     "print(f\"Mean Squared Error: {mse:.6f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
