add fundamentals data source (status invest)

--- a/quantlib/notebooks/llm_analytics.ipynb
+++ b/quantlib/notebooks/llm_analytics.ipynb
@@ -137,14 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.2077\n"
+      "Epoch 1, Loss: 0.2077\n",
+      "Epoch 2, Loss: 0.0354\n",
+      "Epoch 3, Loss: 0.0344\n",
+      "Epoch 4, Loss: 0.0341\n",
+      "Epoch 5, Loss: 0.0339\n"
      ]
     }
    ],
@@ -156,19 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 127 is out of bounds for axis 0 with size 127",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m predicted_tokens = forecaster.fit(prompt, steps=\u001b[32m5\u001b[39m)  \u001b[38;5;66;03m# Predict next 5 days\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Convert predictions back to returns\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m predicted_returns = \u001b[43mMarketTokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtokens_to_values\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredicted_tokens\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[43m    \u001b[49m\u001b[43mforecaster\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbins\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPredicted returns for next periods:\u001b[39m\u001b[33m\"\u001b[39m, predicted_returns[:-\u001b[32m5\u001b[39m])\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/c/Users/enzob/OneDrive/Desktop/ai/quantlib/quantlib/analytics/llm.py:99\u001b[39m, in \u001b[36mMarketTokenizer.tokens_to_values\u001b[39m\u001b[34m(tokens, bins)\u001b[39m\n\u001b[32m     97\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Convert tokens back to approximate values using bin centers.\"\"\"\u001b[39;00m\n\u001b[32m     98\u001b[39m bin_centers = (bins[:-\u001b[32m1\u001b[39m] + bins[\u001b[32m1\u001b[39m:]) / \u001b[32m2\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbin_centers\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[31mIndexError\u001b[39m: index 127 is out of bounds for axis 0 with size 127"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted returns for next periods: [ 0.00267595  0.00792016  0.00729085 -0.00508548  0.00792016 -0.01326645\n",
+      "  0.00330525  0.0049834   0.00414432 -0.00109988  0.0056127  -0.00193896\n",
+      " -0.00109988  0.00330525 -0.00571479 -0.00109988 -0.01326645 -0.00277803\n",
+      "  0.00036849  0.0049834  -0.00571479  0.0009978  -0.00193896  0.00729085\n",
+      " -0.00193896  0.0049834   0.01022761  0.01022761 -0.00047058 -0.00424641\n",
+      " -0.00109988  0.00414432 -0.00340734 -0.00277803  0.00729085  0.0056127\n",
+      "  0.00267595 -0.00047058 -0.00508548 -0.00802224  0.00267595  0.01106668\n",
+      " -0.00109988 -0.00047058 -0.00277803 -0.00193896  0.0129546   0.0009978\n",
+      " -0.00109988 -0.00109988 -0.00949062 -0.00193896  0.0129546   0.00330525\n",
+      "  0.00036849  0.00183687]\n"
      ]
     }
    ],
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
