change project structure

--- a/finpie/notebooks/analytics_examples.ipynb
+++ b/finpie/notebooks/analytics_examples.ipynb
@@ -12,9 +12,9 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "from quantlib.datasource.service import DataService\n",
-    "from quantlib.analytics import Statistical, Technical\n",
-    "from quantlib.data import TimeSeries, RatioTimeSeries\n",
+    "from finpie.datasource.service import DataService\n",
+    "from finpie.analytics import Statistical, Technical\n",
+    "from finpie.data import TimeSeries, RatioTimeSeries\n",
     "\n",
     "# Create data service with default sources\n",
     "data_service = DataService.create_default_service()\n",
