--- a/finpie/notebooks/data_get_example.ipynb
+++ b/finpie/notebooks/data_get_example.ipynb
@@ -11,9 +11,9 @@
     "from typing import Tuple, Union\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from quantlib.data.timeseries import TimeSeries\n",
-    "from quantlib.data.multitimeseries import MultiTimeSeries\n",
-    "from quantlib.datasource.service import DataService"
+    "from finpie.data.timeseries import TimeSeries\n",
+    "from finpie.data.multitimeseries import MultiTimeSeries\n",
+    "from finpie.datasource.service import DataService"
    ]
   },
   {
