--- a/finpie/notebooks/fundamentals_data.ipynb
+++ b/finpie/notebooks/fundamentals_data.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantlib.datasource.sources.schemas.status_invest import FundamentalsParams\n",
-    "from quantlib.datasource.sources.status_invest import StatusInvestSource\n",
+    "from finpie.datasource.sources.schemas.status_invest import FundamentalsParams\n",
+    "from finpie.datasource.sources.status_invest import StatusInvestSource\n",
     "import logging\n",
-    "logger = logging.getLogger('quantlib.datasource.sources.status_invest')\n",
+    "logger = logging.getLogger('finpie.datasource.sources.status_invest')\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
     "# Optional: Add a handler if you want to see the output in the notebook\n",
