--- a/finpie/notebooks/llm_analytics.ipynb
+++ b/finpie/notebooks/llm_analytics.ipynb
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantlib.datasource.service import DataService\n",
-    "data_service = DataService.create_default_service()\n",
+    "from finpie.datasource.service import DataService\n",
     "\n",
+    "#This notebook demonstrates how to use the LLM-based market forecaster for analyzing and predicting market movements.\n",
     "# Define parameters for data fetching\n",
     "symbol = \"IBOV\"  # Change to your desired symbol\n",
     "start_date = \"2021-01-01\"  # Adjust as needed\n",
@@ -75,11 +75,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "## Use the data and build on unix enviroment\n",
     "import numpy as np\n",
     "import torch\n",
-    "from quantlib.analytics.llm import LLMForecaster, MarketTokenizer\n",
-    "from quantlib.data.timeseries import TimeSeries"
+    "from finpie.analytics.llm import LLMForecaster, MarketTokenizer\n",
+    "from finpie.data.timeseries import TimeSeries"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = TimeSeries(pd.read_parquet('quantlib/notebooks/win_returns.parquet'))"
+    "ts = TimeSeries(pd.read_parquet('finpie/notebooks/win_returns.parquet'))"
    ]
   },
   {
