--- a/finpie/notebooks/fundamentals_data.ipynb
+++ b/finpie/notebooks/fundamentals_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,9 @@
      "output_type": "stream",
      "text": [
       "Making request to: https://statusinvest.com.br/category/advancedsearchresultpaginated?search={'p_l':{'Item1':null,'Item2':10}}&page=0&take=15&CategoryType=1\n",
-      "Total results (432) exceed the items per page (15). Some results may be truncated.\n"
+      "Making request to: https://statusinvest.com.br/category/advancedsearchresultpaginated?search={'p_l':{'Item1':null,'Item2':10}}&page=0&take=15&CategoryType=1\n",
+      "Total results (433) exceed the items per page (15). Some results may be truncated.\n",
+      "Total results (433) exceed the items per page (15). Some results may be truncated.\n"
      ]
     },
     {
@@ -102,18 +104,18 @@
        "      <td>520</td>\n",
        "      <td>VIVARA PARTICIPAÇOES S.A</td>\n",
        "      <td>VIVA3</td>\n",
-       "      <td>24.00</td>\n",
-       "      <td>7.74</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>7.74</td>\n",
-       "      <td>1.34</td>\n",
-       "      <td>8.14</td>\n",
+       "      <td>24.61</td>\n",
+       "      <td>7.93</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>7.93</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>8.33</td>\n",
        "      <td>...</td>\n",
        "      <td>91075864.45</td>\n",
        "      <td>11.06</td>\n",
        "      <td>3.10</td>\n",
-       "      <td>5.668746e+09</td>\n",
+       "      <td>5.812827e+09</td>\n",
        "      <td>31</td>\n",
        "      <td>2</td>\n",
        "      <td>13</td>\n",
@@ -126,18 +128,18 @@
        "      <td>244</td>\n",
        "      <td>VIVER INCORPORADORA E CONSTRUTORA S.A.</td>\n",
        "      <td>VIVR3</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>-0.79</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>-0.80</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.24</td>\n",
-       "      <td>-0.89</td>\n",
+       "      <td>-0.90</td>\n",
        "      <td>0.13</td>\n",
-       "      <td>-0.92</td>\n",
+       "      <td>-0.93</td>\n",
        "      <td>...</td>\n",
        "      <td>88812.95</td>\n",
        "      <td>3.85</td>\n",
        "      <td>-1.16</td>\n",
-       "      <td>3.491313e+07</td>\n",
+       "      <td>3.529680e+07</td>\n",
        "      <td>23</td>\n",
        "      <td>2</td>\n",
        "      <td>9</td>\n",
@@ -150,18 +152,18 @@
        "      <td>176</td>\n",
        "      <td>VALID SOLUÇÕES S.A.</td>\n",
        "      <td>VLID3</td>\n",
-       "      <td>26.16</td>\n",
-       "      <td>6.99</td>\n",
-       "      <td>11.64</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>5.54</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>5.43</td>\n",
+       "      <td>27.10</td>\n",
+       "      <td>7.24</td>\n",
+       "      <td>11.24</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>5.74</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>5.63</td>\n",
        "      <td>...</td>\n",
        "      <td>8226410.27</td>\n",
        "      <td>21.39</td>\n",
        "      <td>3.74</td>\n",
-       "      <td>2.140840e+09</td>\n",
+       "      <td>2.217766e+09</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
@@ -222,18 +224,18 @@
        "      <td>226</td>\n",
        "      <td>VESTE S.A. ESTILO</td>\n",
        "      <td>VSTE3</td>\n",
-       "      <td>6.01</td>\n",
-       "      <td>-73.30</td>\n",
+       "      <td>6.04</td>\n",
+       "      <td>-73.67</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.67</td>\n",
-       "      <td>15.29</td>\n",
+       "      <td>15.36</td>\n",
        "      <td>0.42</td>\n",
-       "      <td>21.92</td>\n",
+       "      <td>21.99</td>\n",
        "      <td>...</td>\n",
        "      <td>135463.59</td>\n",
        "      <td>9.00</td>\n",
        "      <td>-0.08</td>\n",
-       "      <td>6.871464e+08</td>\n",
+       "      <td>6.905764e+08</td>\n",
        "      <td>22</td>\n",
        "      <td>2</td>\n",
        "      <td>8</td>\n",
@@ -246,18 +248,18 @@
        "      <td>485</td>\n",
        "      <td>VULCABRAS/AZALEIA S.A.</td>\n",
        "      <td>VULC3</td>\n",
-       "      <td>20.55</td>\n",
-       "      <td>9.64</td>\n",
-       "      <td>6.69</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>9.55</td>\n",
-       "      <td>1.93</td>\n",
-       "      <td>9.57</td>\n",
+       "      <td>20.32</td>\n",
+       "      <td>9.54</td>\n",
+       "      <td>6.77</td>\n",
+       "      <td>2.54</td>\n",
+       "      <td>9.44</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>9.46</td>\n",
        "      <td>...</td>\n",
        "      <td>17598171.27</td>\n",
        "      <td>8.01</td>\n",
        "      <td>2.13</td>\n",
-       "      <td>5.662270e+09</td>\n",
+       "      <td>5.598896e+09</td>\n",
        "      <td>32</td>\n",
        "      <td>2</td>\n",
        "      <td>13</td>\n",
@@ -270,18 +272,18 @@
        "      <td>799</td>\n",
        "      <td>CM HOSPITALAR S.A.</td>\n",
        "      <td>VVEO3</td>\n",
-       "      <td>1.33</td>\n",
-       "      <td>-0.29</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>-0.30</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>-0.50</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>-0.51</td>\n",
        "      <td>0.05</td>\n",
-       "      <td>-3.85</td>\n",
+       "      <td>-3.86</td>\n",
        "      <td>...</td>\n",
        "      <td>2497870.27</td>\n",
        "      <td>5.79</td>\n",
        "      <td>-4.58</td>\n",
-       "      <td>4.293514e+08</td>\n",
+       "      <td>4.390360e+08</td>\n",
        "      <td>80</td>\n",
        "      <td>7</td>\n",
        "      <td>39</td>\n",
@@ -294,18 +296,18 @@
        "      <td>683</td>\n",
        "      <td>WESTWING COMERCIO VAREJISTA S.A.</td>\n",
        "      <td>WEST3</td>\n",
-       "      <td>4.44</td>\n",
-       "      <td>-1.23</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>-1.20</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.21</td>\n",
-       "      <td>-0.90</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>1.17</td>\n",
+       "      <td>-0.88</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>1.20</td>\n",
        "      <td>...</td>\n",
        "      <td>33485.41</td>\n",
        "      <td>20.89</td>\n",
        "      <td>-3.61</td>\n",
-       "      <td>4.943660e+07</td>\n",
+       "      <td>4.810348e+07</td>\n",
        "      <td>21</td>\n",
        "      <td>2</td>\n",
        "      <td>8</td>\n",
@@ -318,18 +320,18 @@
        "      <td>217</td>\n",
        "      <td>WHIRLPOOL S.A.</td>\n",
        "      <td>WHRL3</td>\n",
-       "      <td>4.47</td>\n",
-       "      <td>7.51</td>\n",
-       "      <td>13.32</td>\n",
-       "      <td>2.45</td>\n",
-       "      <td>6.87</td>\n",
-       "      <td>0.67</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>7.44</td>\n",
+       "      <td>13.44</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>0.66</td>\n",
        "      <td>5.23</td>\n",
        "      <td>...</td>\n",
        "      <td>23381.64</td>\n",
        "      <td>1.82</td>\n",
        "      <td>0.60</td>\n",
-       "      <td>6.883383e+09</td>\n",
+       "      <td>6.875421e+09</td>\n",
        "      <td>20</td>\n",
        "      <td>2</td>\n",
        "      <td>8</td>\n",
@@ -342,18 +344,18 @@
        "      <td>217</td>\n",
        "      <td>WHIRLPOOL S.A.</td>\n",
        "      <td>WHRL4</td>\n",
-       "      <td>4.82</td>\n",
-       "      <td>8.09</td>\n",
-       "      <td>13.59</td>\n",
-       "      <td>2.64</td>\n",
-       "      <td>7.40</td>\n",
-       "      <td>0.72</td>\n",
+       "      <td>4.89</td>\n",
+       "      <td>8.21</td>\n",
+       "      <td>13.40</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>7.51</td>\n",
+       "      <td>0.73</td>\n",
        "      <td>5.23</td>\n",
        "      <td>...</td>\n",
        "      <td>32045.77</td>\n",
        "      <td>1.82</td>\n",
        "      <td>0.60</td>\n",
-       "      <td>6.883383e+09</td>\n",
+       "      <td>6.875421e+09</td>\n",
        "      <td>20</td>\n",
        "      <td>2</td>\n",
        "      <td>8</td>\n",
@@ -366,18 +368,18 @@
        "      <td>356</td>\n",
        "      <td>WIZ CO PARTICIPAÇÕES E CORRETAGEM DE SEGUROS S.A.</td>\n",
        "      <td>WIZC3</td>\n",
-       "      <td>6.94</td>\n",
-       "      <td>6.56</td>\n",
-       "      <td>3.61</td>\n",
-       "      <td>1.87</td>\n",
-       "      <td>1.93</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>1.86</td>\n",
+       "      <td>7.06</td>\n",
+       "      <td>6.67</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>1.90</td>\n",
        "      <td>...</td>\n",
        "      <td>3063158.77</td>\n",
        "      <td>3.71</td>\n",
        "      <td>1.06</td>\n",
-       "      <td>1.109757e+09</td>\n",
+       "      <td>1.128945e+09</td>\n",
        "      <td>58</td>\n",
        "      <td>4</td>\n",
        "      <td>26</td>\n",
@@ -438,18 +440,18 @@
        "      <td>256</td>\n",
        "      <td>ZAMP S.A.</td>\n",
        "      <td>ZAMP3</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>-8.70</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>-10.14</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>-799.85</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>-1274.35</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>-932.29</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>-1406.80</td>\n",
        "      <td>...</td>\n",
        "      <td>2533779.27</td>\n",
        "      <td>3.73</td>\n",
        "      <td>-0.35</td>\n",
-       "      <td>1.253358e+09</td>\n",
+       "      <td>1.460894e+09</td>\n",
        "      <td>28</td>\n",
        "      <td>2</td>\n",
        "      <td>11</td>\n",
@@ -481,38 +483,38 @@
        "14        256                                          ZAMP S.A.  ZAMP3   \n",
        "\n",
        "    price    p_l     dy  p_vp  p_ebit  p_ativo  ev_ebit  ...  \\\n",
-       "0   24.00   7.74   2.75  2.17    7.74     1.34     8.14  ...   \n",
-       "1    0.91  -0.79    NaN  0.24   -0.89     0.13    -0.92  ...   \n",
-       "2   26.16   6.99  11.64  1.22    5.54     0.73     5.43  ...   \n",
+       "0   24.61   7.93   2.68  2.23    7.93     1.37     8.33  ...   \n",
+       "1    0.92  -0.80    NaN  0.24   -0.90     0.13    -0.93  ...   \n",
+       "2   27.10   7.24  11.24  1.27    5.74     0.75     5.63  ...   \n",
        "3    5.00  -1.28    NaN  0.44   -2.23     0.15    -2.12  ...   \n",
        "4    0.00   0.00    NaN  0.00    0.00     0.00    -2.12  ...   \n",
-       "5    6.01 -73.30    NaN  0.67   15.29     0.42    21.92  ...   \n",
-       "6   20.55   9.64   6.69  2.57    9.55     1.93     9.57  ...   \n",
-       "7    1.33  -0.29    NaN  0.23   -0.50     0.05    -3.85  ...   \n",
-       "8    4.44  -1.23    NaN  0.21   -0.90     0.16     1.17  ...   \n",
-       "9    4.47   7.51  13.32  2.45    6.87     0.67     5.23  ...   \n",
-       "10   4.82   8.09  13.59  2.64    7.40     0.72     5.23  ...   \n",
-       "11   6.94   6.56   3.61  1.87    1.93     0.43     1.86  ...   \n",
+       "5    6.04 -73.67    NaN  0.67   15.36     0.42    21.99  ...   \n",
+       "6   20.32   9.54   6.77  2.54    9.44     1.91     9.46  ...   \n",
+       "7    1.36  -0.30    NaN  0.24   -0.51     0.05    -3.86  ...   \n",
+       "8    4.33  -1.20    NaN  0.21   -0.88     0.15     1.20  ...   \n",
+       "9    4.43   7.44  13.44  2.43    6.80     0.66     5.23  ...   \n",
+       "10   4.89   8.21  13.40  2.68    7.51     0.73     5.23  ...   \n",
+       "11   7.06   6.67   3.55  1.90    1.96     0.44     1.90  ...   \n",
        "12  26.08   7.34   2.30  1.23    4.50     0.72     6.50  ...   \n",
        "13  32.93   9.27   2.00  1.55    5.68     0.91     6.50  ...   \n",
-       "14   3.08  -8.70    NaN  0.83 -799.85     0.29 -1274.35  ...   \n",
+       "14   3.59 -10.14    NaN  0.96 -932.29     0.34 -1406.80  ...   \n",
        "\n",
        "    liquidezmediadiaria    vpa   lpa  valormercado  segmentid  sectorid  \\\n",
-       "0           91075864.45  11.06  3.10  5.668746e+09         31         2   \n",
-       "1              88812.95   3.85 -1.16  3.491313e+07         23         2   \n",
-       "2            8226410.27  21.39  3.74  2.140840e+09         12         1   \n",
+       "0           91075864.45  11.06  3.10  5.812827e+09         31         2   \n",
+       "1              88812.95   3.85 -1.16  3.529680e+07         23         2   \n",
+       "2            8226410.27  21.39  3.74  2.217766e+09         12         1   \n",
        "3                  0.00  11.27 -3.91  7.140389e+08         16         1   \n",
        "4                   NaN  11.27 -3.91  7.140389e+08         16         1   \n",
-       "5             135463.59   9.00 -0.08  6.871464e+08         22         2   \n",
-       "6           17598171.27   8.01  2.13  5.662270e+09         32         2   \n",
-       "7            2497870.27   5.79 -4.58  4.293514e+08         80         7   \n",
-       "8              33485.41  20.89 -3.61  4.943660e+07         21         2   \n",
-       "9              23381.64   1.82  0.60  6.883383e+09         20         2   \n",
-       "10             32045.77   1.82  0.60  6.883383e+09         20         2   \n",
-       "11           3063158.77   3.71  1.06  1.109757e+09         58         4   \n",
+       "5             135463.59   9.00 -0.08  6.905764e+08         22         2   \n",
+       "6           17598171.27   8.01  2.13  5.598896e+09         32         2   \n",
+       "7            2497870.27   5.79 -4.58  4.390360e+08         80         7   \n",
+       "8              33485.41  20.89 -3.61  4.810348e+07         21         2   \n",
+       "9              23381.64   1.82  0.60  6.875421e+09         20         2   \n",
+       "10             32045.77   1.82  0.60  6.875421e+09         20         2   \n",
+       "11           3063158.77   3.71  1.06  1.128945e+09         58         4   \n",
        "12               771.43  21.24  3.55  1.085622e+09          1         1   \n",
        "13             23242.35  21.24  3.55  1.085622e+09          1         1   \n",
-       "14           2533779.27   3.73 -0.35  1.253358e+09         28         2   \n",
+       "14           2533779.27   3.73 -0.35  1.460894e+09         28         2   \n",
        "\n",
        "    subsectorid                             subsectorname  \\\n",
        "0            13             Tecidos. Vestuário e Calçados   \n",
@@ -551,7 +553,7 @@
        "[15 rows x 38 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,13 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Making request to: https://statusinvest.com.br/acao/companytickerprovents?ticker=VALE3&chartProventsType=2\n",
       "Making request to: https://statusinvest.com.br/acao/companytickerprovents?ticker=VALE3&chartProventsType=2\n"
      ]
     },
@@ -720,7 +723,7 @@
        "18  2025   2.141847"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,13 +734,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Making request to: https://statusinvest.com.br/acao/getrevenue?code=VALE3&type=2&viewType=0\n",
       "Making request to: https://statusinvest.com.br/acao/getrevenue?code=VALE3&type=2&viewType=0\n"
      ]
     },
@@ -1022,7 +1026,7 @@
        "16          0.00       37.16          30.78  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,13 +1037,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Making request to: https://statusinvest.com.br/acao/getmargins?code=VALE3&type=2\n",
       "Making request to: https://statusinvest.com.br/acao/getmargins?code=VALE3&type=2\n"
      ]
     },
@@ -1251,7 +1256,7 @@
        "16  2024        0        36.25         35.70       26.92          14.77"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,13 +1267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Making request to: https://statusinvest.com.br/acao/getbsactivepassivechart?code=VALE3&type=2\n",
       "Making request to: https://statusinvest.com.br/acao/getbsactivepassivechart?code=VALE3&type=2\n"
      ]
     },
@@ -1535,7 +1541,7 @@
        "16       1.869604e+10          0.000000e+00       1.010008e+11  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
