fix datasource package

--- a/finpie/notebooks/data_get_example.ipynb
+++ b/finpie/notebooks/data_get_example.ipynb
@@ -18,22 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_service = DataService.create_default_service()\n",
     "\n",
     "# Define parameters for data fetching\n",
-    "symbol = \"WIN$N\"  # Change to your desired symbol\n",
-    "start_date = \"2022-01-01\"  # Adjust as needed\n",
+    "symbol = \"PETR4\"  # Change to your desired symbol\n",
+    "start_date = \"2025-01-01\"  # Adjust as needed\n",
     "end_date = \"2025-05-16\"    # Adjust as needed\n",
     "interval = \"1m\"            # 1-minute data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
